feat(45): Update support to extract user information from jwt
- Add Cognito extraction logic